--- a/Synthetique v0.Rmd
+++ b/Synthetique v0.Rmd
@@ -363,6 +363,7 @@ Ylab = "Emploi", Xlab = "year", Legend = c("France", "synthetic France"), Legend
 ```
 
 
+
 ```{r}
  synth.tables <- Synth::synth.tab(dataprep.res = dataprep.out,
  synth.res = synth.out)
@@ -466,6 +467,7 @@ synth.tables$tab.v
 ```{r}
 value='VA'
 pays='FRA'
+pays_autres=length(c(table(df.melted$country)))-1
 Xt=subset(df.melted, country==pays& temps<2013 &temps>1999)
 Xt=Xt[,value]
 Xt=scale(Xt)#on récupère les données pour la France
@@ -473,38 +475,45 @@ Xt=scale(Xt)#on récupère les données pour la France
 Xn=subset(df.melted, temps<2013 &temps>1999)
 Xn=Xn[Xn$country!=pays,]#on récupère les autres
 Xn=matrix(Xn[,value], nrow=pays_autres)
-Xn=t(scale(t(Xn)))#on normalise les données par pays(la normalisation se fait par colonne)
+Xnorm=t(scale(t(Xn)))#on normalise les données par pays(la normalisation se fait par colonne)
 Xt=Xt[1:13]
 ```
 
 
-
+#calcul des poids
 ```{r}
-pays_autres=nrow(Xn)
 x0=c(rep(1/pays_autres,pays_autres))#on crée un vecteur de départ au hasard
-f=function(x){norm(Xt-x%*%Xn, type="2")}
+f=function(x){norm(Xt-x%*%Xnorm, type="2")}
 n=function(x){x}#contrainte de positivité des poids (hin(x)>0)
 q=function(x){sum(x)-1}#fonction de la contrainte d'égalité (heq(x)=0)
 opti=quiet(auglag(x0, f, hin=n, heq=q))#fonction d'optimisation sur toute la période
 opti$par=matrix(opti$par, ncol=1)
+```
+
+plot des résultats
+```{r}
+Xt=subset(df.melted, country==pays)
+Xt=Xt[,value]
+Xn=subset(df.melted)
+Xn=Xn[Xn$country!=pays,]#on récupère les autres
+Xn=matrix(Xn[,value], nrow=pays_autres)
+Xnorm=t(scale(t(Xn)))#on normalise les données par pays(la normalisation se fait par colonne)
+
+plot(c(t(opti$par)%*%Xnorm*sd(c(Xt))+mean(c(Xt))))
+plot(Xt)
+
 ```
 ```{r}
 opti$par
 ```
 
 ```{r}
-frsynth=t(opti$par)%*%Xn*sd(c(Xt))+mean(c(Xt))
+mean(c(Xt))
+sd(c(Xt))
 ```
 
-```{r}
-Xt=subset(df.melted, country==pays)
-Xt=Xt[,value]
-Xn=subset(df.melted, country!=pays)
-Xn=matrix(Xn[,value], nrow=pays_autres)
-plot(c(t(opti$par)%*%Xn*sd(c(Xt))+mean(c(Xt))))
-plot(Xt)
 
-```
+
 
 
 
