--- a/Synthetique v0.Rmd
+++ b/Synthetique v0.Rmd
@@ -8,6 +8,7 @@ library("Synth")
 library(tidyverse)
 library(numDeriv)
 library('alabama')
+library("rgenoud")
 ```
 
 ```{r}
@@ -415,7 +416,7 @@ dataprep.out=Synth::dataprep(foo=df.melt,
                 treatment.identifier = ind_pays, # n° de l'unité traitée
                 controls.identifier = c(1:max(df.melt$index))[-ind_pays], #n° des unités de contrôles
                 time.variable = 'temps', #colonne où se trouve la date
-                time.optimize.ssr = 1999:2012, #période de maximisation
+                time.optimize.ssr = 2005:2012, #période de maximisation
                 time.plot=1995:2017) #période tracée sur le graphique
 synth.out <- Synth::synth(data.prep.obj = dataprep.out, method = "BFGS")
 
@@ -436,25 +437,41 @@ df.melted_i
 ```
 
 ```{r}
-variable=c("Invest_pop","W","VA_pop","Productivite","chomage","export","Part_lab")
+df.melted_i$Emploi_scale<-scale(df.melted_i$Emploi)
+
+variable=c("Invest_pop","W","VA_pop","Productivite","export","Part_lab","Emploi_scale")
+df.melted_i$Emploi_scale<-scale(df.melted_i$Emploi)
+
+indice_sans=function(base)
+{
+ df_exo=filter(df.melted_i, country !='ITA' & country !='DEU')
+ a=unique(df_exo$index) 
+ a=a[a!=10]
+ return(a)  
+}
+
+a=indice_sans(df.melted_i)
+b=c(1:9,11:21)
+
 dataprep.out=Synth::dataprep(foo=df.melted_i,
-                special.predictors = gen_liste(variable),#Les variables utilisées en contrôle
+                predictors = (variable),#Les variables utilisées en contrôle
                 predictors.op = "mean", #La manière dont on les prend en compte
-                time.predictors.prior = 2012, #période pré-traitement
-                dependent="chomage", #variable d'intérêt
+                time.predictors.prior = c(2000:2011), #période pré-traitement
+                dependent="Emploi", #variable d'intérêt
                 unit.variable = "index", #colonne avec les index des pays
                 unit.names.variable="country", #nom des pays
                 treatment.identifier = 10, # n° de l'unité traitée
-                controls.identifier = c(1:9,11:21), #n° des unités de contrôles
+                controls.identifier = a, #n° des unités de contrôles
                 time.variable = 'temps', #colonne où se trouve la date
-                time.optimize.ssr = 2000:2012, #période de maximisation
+                time.optimize.ssr = 2000:2005, #période de maximisation
                 time.plot=1999:2016, ) #période tracée sur le graphique
 
-synth.out <- Synth::synth(data.prep.obj = dataprep.out, method = "BFGS")
+synth.out <- Synth::synth(data.prep.obj = dataprep.out, method = c("BFGS"),custom.v=c(1/12,1/12,1/12,1/12,5/12,1/12,1/12))
 
 Synth::path.plot(synth.res = synth.out, dataprep.res = dataprep.out,
 Ylab = "PIB", Xlab = "year", Legend = c("France", "synthetic France"), Legend.position = "bottomright")
- synth.tables <- Synth::synth.tab(dataprep.res = dataprep.out,
+
+synth.tables <- Synth::synth.tab(dataprep.res = dataprep.out,
  synth.res = synth.out)
 
 synth.tables$tab.w
@@ -490,7 +507,7 @@ opti=quiet(auglag(x0, f, hin=n, heq=q))#fonction d'optimisation sur toute la pé
 opti$par=matrix(opti$par, ncol=1)
 ```
 
-plot des résultats
+#plot des résultats
 ```{r}
 Xt=subset(df.melted, country==pays)
 Xt=Xt[,value]
