--- a/Synthetique v0.Rmd
+++ b/Synthetique v0.Rmd
@@ -536,7 +536,9 @@ valeur=dataprep.out$Y1-dataprep.out$Y0%*%synth.out$solution.w
 
 
 ```{r}
-for (i in c(2:20))
+numinit=2
+numend=20
+for (i in c(numinit:numend))
 {
   #On calcul le contrôle synthétique avec l'unité i traitée
   print(i)
@@ -558,14 +560,14 @@ quiet(synth.out_i <- Synth::synth(data.prep.obj = dataprep_i.out, method = "BFGS
 
 #Synth::gaps.plot(synth.res = synth.out_i, dataprep.res = dataprep_i.out,Ylab = "PIB", Xlab = "year")
 
-  if (i==2) { #On initialise une base avec en ligne le noms de l'unité puis l'effet du traitement pour chaque année (le numéro de l'année n'est pas dans la base)
+  if (i==numinit) { #On initialise une base avec en ligne le noms de l'unité puis l'effet du traitement pour chaque année (le numéro de l'année n'est pas dans la base)
     noms=c(rep(as.character(i),nrow(dataprep_i.out$Y0)))
     valeur=dataprep_i.out$Y1-dataprep_i.out$Y0%*%synth.out_i$solution.w 
     df=data.frame(noms,valeur)
     couleur=c("red") #ca c'est pour gérer les couleurs 
   }
     
-  if (i>2) {  #On complète la base
+  if (i>numinit) {  #On complète la base
     noms=c(noms,rep(as.character(i),nrow(dataprep_i.out$Y0)))
     valeur=c(valeur,dataprep_i.out$Y1-dataprep_i.out$Y0%*%synth.out_i$solution.w)
     df=data.frame(noms,valeur)
@@ -581,11 +583,25 @@ df_effe=filter(df2,x>2008)
 
 
 ```{r}
+df2$noms=as.numeric(df2$nom)
+df_RMPSE=df2%>%rename(index=noms)%>%left_join(df.melted_i[c('country','index')][1:21,])
+df_RMPSE$valeur_sq=df_RMPSE$valeur*df_RMPSE$valeur
+RMPSE_res=group_by(df_RMPSE,index)%>% summarise(RMPSE_tot = mean(valeur_sq),country=unique(country))
+RMPSE_res$RMPSE_trait=(group_by(filter(df_RMPSE,x>2012),index)%>% summarise(mean = mean(valeur_sq),country=unique(country)))$mean
+RMPSE_res$RMPSE_prev=(group_by(filter(df_RMPSE,x<2013),index)%>% summarise(mean = mean(valeur_sq),country=unique(country)))$mean
+```
+
+
+```{r}
+RMPSE_res%>%mutate(RMPSE_tot=sqrt(RMPSE_res$RMPSE_tot),
+                   RMPSE_trait=sqrt(RMPSE_res$RMPSE_trait),
+                   RMPSE_res=sqrt(RMPSE_res$RMPSE_prev)) %>%select(country,RMPSE_tot,RMPSE_trait,RMPSE_prev)
+```
+
+
+```{r}
 qplot(x=x, y=valeur,color=noms, data=df_effe, geom="line",ylim=c(-2000,2000))+ xlab("Date")+scale_color_manual(breaks = unique(df2$noms),                        values=couleur)
 
-qplot(x=x, y=valeur,color=noms, data=df_effe, geom="line",ylim=c(-2000,2000))+ xlab("Date")
-
-df.melted_i
 ```
 
 
